--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,13 +1,15 @@
 ---
 layout: default
 ---
-<article>
-  <header>
-    <i class="fa fa-unlock" aria-hidden="true"></i>
-    <span class="article-date">&nbsp;{{ page.date | date:"%B %d, %Y" }}</span><br>
-    <h1>{{ page.title }}</h1>
-  </header>
-  <p>
-      {{ content }}
-  </p>
-</article>
+<div class="wrap">
+  <article>
+    <header>
+      <i class="fa fa-unlock" aria-hidden="true"></i>
+      <span class="article-date">&nbsp;{{ page.date | date:"%B %d, %Y" }}</span><br>
+      <h1>{{ page.title }}</h1>
+    </header>
+    <p>
+        {{ content }}
+    </p>
+  </article>
+</div>
