--- a/assets/style.css
+++ b/assets/style.css
@@ -49,9 +49,13 @@ img.brand {
   background: #FFDAB9; /* Peachpuff*/
   margin: 1em;
 }
-article {
+.inner {
   position: relative;
   left: -50%;
+}
+
+article h1{
+  margin-top: 2em;
 }
 
 article a { color: #ff9900;}
