--- a/assets/style.css
+++ b/assets/style.css
@@ -45,17 +45,20 @@ img.brand {
 .wrap {
   float: left; /* 自适应内容宽度 */
   position: relative;
-  left: 50%;
+  left: 25%;
   background: #FFDAB9; /* Peachpuff*/
-  margin: 1em;
 }
 .inner {
   position: relative;
-  left: -50%;
+  left: -25%;
 }
 
+article{
+  margin: 1em;
+  padding: 1em;
+}
 article h1{
-  margin-top: 2em;
+  margin-top: 1em;
 }
 
 article a { color: #ff9900;}
