--- a/assets/style.css
+++ b/assets/style.css
@@ -41,22 +41,13 @@ img.brand {
   margin: 0 auto;
 }
 
-/* Vertically center post */
-.wrap {
-  float: left; /* 自适应内容宽度 */
-  position: relative;
-  left: 25%;
+article {
   background: #FFDAB9; /* Peachpuff*/
-}
-.inner {
-  position: relative;
-  left: -25%;
+  width: 700px;
+  margin: 1em auto;;
+  padding: 2em;
 }
 
-article{
-  margin: 1em;
-  padding: 1em;
-}
 article h1{
   margin-top: 1em;
 }
