--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Cormorant Garamond', serif;
   font-weight: 400;
   line-height: 1.45;
   color: #534646;    /*deep brown*/
