--- a/assets/style.css
+++ b/assets/style.css
@@ -25,10 +25,13 @@ img.brand {
 .nav-item {
   font-size: 1.2em;
   margin: auto 0.2em;
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
 }
 
 .navbar-text {
   font-size: 1.9em;
+  font-family: 'Lato', sans-serif;
   font-weight: 300;
 }
 
