--- a/assets/style.css
+++ b/assets/style.css
@@ -23,12 +23,12 @@ img.brand {
 
 .nav-item {
   font-size: 1.2em;
-  font-family: 'Rock Salt', cursive;
+  font-family: 'Amatic SC', cursive;
   margin: auto 0.2em;
 }
 
 .navbar-text {
-  font-family: 'Rock Salt', cursive;
+  font-family: 'Amatic SC', cursive;
   font-size: 1.9em;
 }
 
