--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,9 @@
 html {
-  font-size: 1.5em;
+  font-size: 1em;
 }
 
 body {
-  font-family: 'Reenie Beanie', cursive;
+  font-family: 'Gloria Hallelujah', cursive;
   line-height: 1.45;
   color: #534646;    /*deep brown*/
 }
