--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/style.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/morestyle.css">
-  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Gloria+Hallelujah" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:700|Indie+Flower" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <title>
     {% if page.title %} {{ page.title }} | {% endif %} Kouyaa
