--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Open Sans', sans-serif;
   line-height: 1.45;
   color: #534646;    /*deep brown*/
 }
@@ -23,12 +23,12 @@ img.brand {
 
 .nav-item {
   font-size: 1.5em;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Caveat', cursive;
   margin: auto 0.2em;
 }
 
 .navbar-text {
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Caveat', cursive;
   font-size: 2.1em;
 }
 
@@ -41,6 +41,11 @@ img.brand {
   margin: 0 auto;
 }
 
+.posts li {
+  font-family: 'Caveat', cursive;
+}
+
+
 /* how to vertically center a partial width div? */
 article {
   background: #FFDAB9; /* Peachpuff*/
@@ -51,6 +56,7 @@ article {
 
 article h1{
   margin-top: 1em;
+  font-family: 'Caveat', cursive;
 }
 
 article a { color: #ff9900;}
