--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Megrim', cursive;
   font-size: 400;
   line-height: 1.45;
   color: #534646;    /*deep brown*/
@@ -29,7 +29,7 @@ img.brand {
 }
 
 .navbar-text {
-  font-family: 'Caveat', cursive;
+  font-family: 'Megrim', cursive;
   font-size: 2.1em;
 }
 
@@ -38,12 +38,12 @@ img.brand {
 }
 
 .carousel-item h3 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Megrim', cursive;
   font-size: 300i;
 }
 
 carousel-item p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Megrim', cursive;
   font-size: 300i;
 }
 
@@ -53,17 +53,17 @@ carousel-item p {
 }
 
 .about h4 {
-  font-family: 'Caveat', cursive;
+  font-family: 'Megrim', cursive;
   font-size: 2em;
 }
 
 .about p {
-  font-family: 'Caveat', cursive;
+  font-family: 'Megrim', cursive;
   font-size: 1.4em;
 }
 
 .posts li {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Megrim', cursive;
   font-size: 300i;
 }
 
@@ -78,7 +78,7 @@ article {
 
 article h1{
   margin-top: 1em;
-  font-family: 'Caveat', cursive;
+  font-family: 'Megrim', cursive;
 }
 
 article a { color: #ff9900;}
