--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,8 @@ html {
 }
 
 body {
-  font-family: 'Megrim', cursive;
-  font-size: 400;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
   line-height: 1.45;
   color: #534646;    /*deep brown*/
 }
@@ -24,12 +24,11 @@ img.brand {
 
 .nav-item {
   font-size: 1.5em;
-  font-family: 'Caveat', cursive;
   margin: auto 0.2em;
 }
 
 .navbar-text {
-  font-family: 'Megrim', cursive;
+  font-weight: 300;
   font-size: 2.1em;
 }
 
@@ -38,13 +37,11 @@ img.brand {
 }
 
 .carousel-item h3 {
-  font-family: 'Megrim', cursive;
-  font-size: 300i;
+  font-weight: 300;
 }
 
 carousel-item p {
-  font-family: 'Megrim', cursive;
-  font-size: 300i;
+  font-weight: 300;
 }
 
 .about {
@@ -53,17 +50,14 @@ carousel-item p {
 }
 
 .about h4 {
-  font-family: 'Megrim', cursive;
   font-size: 2em;
 }
 
 .about p {
-  font-family: 'Megrim', cursive;
   font-size: 1.4em;
 }
 
 .posts li {
-  font-family: 'Megrim', cursive;
   font-size: 300i;
 }
 
@@ -78,7 +72,6 @@ article {
 
 article h1{
   margin-top: 1em;
-  font-family: 'Megrim', cursive;
 }
 
 article a { color: #ff9900;}
