--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ img.brand {
 
 /* how to vertically center a partial width div? */
 article {
-  background: #FFDAB9; /* Peachpuff*/
+  background: #FFFFA5; /* yellow notebook*/
   width: 700px;
   margin: 1em auto;;
   padding: 2em;
@@ -51,6 +51,10 @@ article {
 
 article h1{
   margin-top: 1em;
+}
+
+article p {
+  border-bottom:thin dotted #BFC6A5;
 }
 
 article a { color: #ff9900;}
