--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ img.brand {
 
 /* how to vertically center a partial width div? */
 article {
-  background: #FFFFA5; /* yellow notebook*/
+  background: ##ffff66; /* yellow notebook*/
   width: 700px;
   margin: 1em auto;;
   padding: 2em;
@@ -53,7 +53,7 @@ article h1{
   margin-top: 1em;
 }
 
-article p {
+article h1, h2, h3, h4, h5, h6, p, li, a {
   border-bottom:thin dotted #BFC6A5;
 }
 
