--- a/assets/style.css
+++ b/assets/style.css
@@ -43,7 +43,7 @@ img.brand {
 
 /* how to vertically center a partial width div? */
 article {
-  background: ##ffff66; /* yellow notebook*/
+  background: #ffff66; /* yellow notebook*/
   width: 700px;
   margin: 1em auto;;
   padding: 2em;
