--- a/assets/style.css
+++ b/assets/style.css
@@ -53,7 +53,7 @@ article h1{
   margin-top: 1em;
 }
 
-article h1, h2, h3, h4, h5, h6, p, li, a {
+article h1, h2, h3, h4, h5, h6, p, li {
   border-bottom:thin dotted #BFC6A5;
 }
 
