--- a/assets/style.css
+++ b/assets/style.css
@@ -53,8 +53,11 @@ article h1{
   margin-top: 1em;
 }
 
-article h1, h2, h3, h4, h5, h6, p, li {
-  border-bottom:thin dotted #BFC6A5;
+article p {
+  border-bottom: thin dotted #BFC6A5;
+}
+aritcle li {
+  border-bottom: thin dotted #BFC6A5;
 }
 
 article a { color: #ff9900;}
