--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,10 @@ article h1{
   margin-top: 1em;
 }
 
-article p {
+/* article p {
   text-decoration: dashed underline #BFC6A5;
 }
+*/
 aritcle li {
   border-bottom: thin dotted #BFC6A5;
 }
