--- a/assets/style.css
+++ b/assets/style.css
@@ -53,12 +53,8 @@ article h1{
   margin-top: 1em;
 }
 
-/* article p {
-  text-decoration: dashed underline #BFC6A5;
-}
-*/
-aritcle li {
-  border-bottom: thin dotted #BFC6A5;
+article h1,h2,h3,h4,h5,h6 {
+ border-bottom: thin dotted #BFC6A5;
 }
 
 article a { color: #ff9900;}
