--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,10 @@ img.brand {
   margin: 0 auto;
 }
 
+.about img {
+  width: 50%;
+}
+
 /* how to vertically center a partial width div? */
 article {
   background: #ffff99; /* yellow notebook*/
