--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="{{ 'code.html' | absolute_url }}">Code<span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ 'life.html' | absolute_url }}">Life</a>
+                <a class="nav-link" href="{{ 'anotherlife.html' | absolute_url }}">Life</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ 'about.html'| absolute_url }}">About</a>
