--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ img.brand {
   border-bottom-style: solid;
   border-bottom-width： thin;
   border-bottom-color: #534646;
-  background-image: url(/images/sea.jpg);
+  background-image: url(/img/sea.jpg);
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
