--- a/assets/style.css
+++ b/assets/style.css
@@ -20,10 +20,8 @@ img.brand {
   border-bottom-style: solid;
   border-bottom-width： thin;
   border-bottom-color: #534646;
-  background-image: url(/img/sea.jpg);
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: url(/img/navbg.jpg);
+  background-repeat: repeat;
 }
 
 .nav-item {
