--- a/assets/style.css
+++ b/assets/style.css
@@ -46,11 +46,11 @@ img.brand {
 }
 
 
-.about h4 {
+.about-container h4 {
   margin-top: 1em;
 }
 
-.about img {
+.about-container img {
   width: 60%;
 }
 
